# drone-tracker

./: .clang-format  .gitignore  CMakeLists.txt  README.md
config/: pipeline.yaml
scripts/: generate_ppt_pdf.py  generate_test_video.py  install_deps.sh  test_pipeline.py
src/: CMakeLists.txt  main.cpp
src/capture/: capture_base.h  capture_factory.cpp  capture_factory.h  capture_file.cpp  capture_file.h  capture_rtsp.cpp  capture_rtsp.h  capture_usb.cpp  capture_usb.h
src/core/: config.cpp  config.h  frame.h  logger.cpp  logger.h  pipeline.cpp  pipeline.h  ring_buffer.h  timer.h
src/detect/: detector_base.h  detector_factory.cpp  detector_factory.h  detector_onnx.cpp  detector_onnx.h  detector_tensorrt.cpp  detector_tensorrt.h  preprocessing.cpp  preprocessing.h
src/predict/: motion_model.cpp  motion_model.h  trajectory_predictor.cpp  trajectory_predictor.h
src/track/: kalman_filter.cpp  kalman_filter.h  lapjv.cpp  lapjv.h  strack.cpp  strack.h  tracker.cpp  tracker.h
src/ui/: hud_elements.cpp  hud_elements.h  overlay_renderer.cpp  overlay_renderer.h  ui_window.cpp  ui_window.h
tests/: CMakeLists.txt  test_kalman_filter.cpp  test_ring_buffer.cpp  test_targeting.cpp  test_tracker.cpp
training/: evaluate.py  export_onnx.py  requirements.txt  train.py
training/configs/: test_config.yaml  train_config.yaml
training/dataset/: __init__.py  augmentations.py  drone_dataset.py
training/models/: __init__.py  drone_net.py  losses.py
training/utils/: ema.py  metrics.py
