cmake_minimum_required(VERSION 3.20)
project(drone-tracker VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(USE_TENSORRT "Build with TensorRT support" ON)
option(USE_ONNXRUNTIME "Build with ONNX Runtime support" ON)
option(BUILD_TESTS "Build unit tests" ON)
option(ENABLE_PROFILING "Enable detailed profiling output" OFF)

find_package(OpenCV 4.5 REQUIRED COMPONENTS core imgproc imgcodecs videoio highgui)
find_package(Threads REQUIRED)
find_package(spdlog REQUIRED)
find_package(yaml-cpp REQUIRED)
find_package(Eigen3 3.3 REQUIRED)

if(USE_TENSORRT)
    find_package(CUDA)
    if(CUDA_FOUND)
        find_library(NVINFER nvinfer)
        find_library(NVONNXPARSER nvonnxparser)
        if(NVINFER AND NVONNXPARSER)
            add_definitions(-DHAS_TENSORRT)
            message(STATUS "TensorRT enabled: ${NVINFER}")
        else()
            message(WARNING "TensorRT libraries not found, disabling")
            set(USE_TENSORRT OFF)
        endif()
    else()
        message(WARNING "CUDA not found, disabling TensorRT")
        set(USE_TENSORRT OFF)
    endif()
endif()

if(USE_ONNXRUNTIME)
    find_path(ONNXRT_INCLUDE onnxruntime_cxx_api.h PATH_SUFFIXES onnxruntime)
    find_library(ONNXRT_LIB onnxruntime)
    if(ONNXRT_INCLUDE AND ONNXRT_LIB)
        add_definitions(-DHAS_ONNXRUNTIME)
        message(STATUS "ONNX Runtime enabled: ${ONNXRT_LIB}")
    else()
        message(WARNING "ONNX Runtime not found, disabling")
        set(USE_ONNXRUNTIME OFF)
    endif()
endif()

if(ENABLE_PROFILING)
    add_definitions(-DPROFILING_ENABLED)
endif()

add_subdirectory(src)

if(BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()
